--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/avaliar-relatorio.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/avaliar-relatorio.html
@@ -16,7 +16,7 @@
         <ul class="breadcrumb">
         	<li><a th:href="@{/Supervisao/}" >Minhas Turmas</a></li>
             <li><a th:href="@{'/Supervisao/Turma/' + ${estagio.turma.id}}">Detalhes Turma</a></li>
-            <li><a th:href="@{'/Supervisao/Acompanhamento/' + ${estagio.estagiario.id}}">Acompanhamento Estagiário</a></li>
+            <li><a th:href="@{'/Supervisao/Acompanhamento/' + ${estagio.id}}">Acompanhamento Estagiário</a></li>
             <li class="active">Avaliar Relatório</li>
         </ul>
         <h1>Avaliar Relatório</h1>
@@ -24,7 +24,7 @@
   </div>
 
 
-	<div class="container animated fadeInRight">
+	<div class="container">
 	    <div class="row">
 	      <div class="col-md-4">
 	        <div class="panel panel-bluegray">
