--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/mapa-frequencias.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/mapa-frequencias.html
@@ -22,7 +22,7 @@
     </div>
   </div>
   
-  <div class="container animated fadeInRight">
+  <div class="container">
   	<div class="row">
 		<div class="col-md-3">
 	    	<div class="panel panel-bluegray">
