--- a/aplicacoes/gestao-estagio/src/main/resources/templates/login.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/login.html
@@ -56,6 +56,8 @@
 				<div class="panel-body">
 						<div th:if="${param.error}" th:text="${error}" class="alert alert-dismissible alert-danger"></div>
 
+						<div th:if="${success != null}" th:text="${success}" class="alert alert-dismissible alert-success"></div>
+
 						<div class="form-group">
 							<label for="username">CPF:</label> 
 							<input class="form-control" id="username" name="username" />
