--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/editar-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/editar-turma.html
@@ -61,7 +61,7 @@
   </div>
 
 
-	<div class="container animated fadeInRight">
+	<div class="container">
 	    <div class="row">
 		    <div class="col-md-12">
 		        <div class="panel panel-bluegray">
