--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/formulario-evento.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/formulario-evento.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-	<div class="container animated fadeInRight">
+	<div class="container">
 	    <div class="row">
 	      <div class="col-md-4">
 	        <div class="panel panel-bluegray">
