--- a/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/vinculos-turma.html
+++ b/aplicacoes/gestao-estagio/src/main/resources/templates/supervisao/vinculos-turma.html
@@ -23,7 +23,7 @@
   </div>
 
 
-	<div class="container animated fadeInRight">
+	<div class="container">
 	    <div class="row">
 	      <div class="col-md-4">
 	        <div class="panel panel-bluegray">
